Corrected layout issue where route distance was off-centerin route modal

--- a/client/src/components/Routes/RouteModal.css
+++ b/client/src/components/Routes/RouteModal.css
@@ -5,3 +5,9 @@
   align-items: center;
   justify-content: space-around;
 }
+
+.route-modal-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
